@@ -28,7 +28,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.apache.pulsar.ecosystem</groupId>
   <artifactId>pulsar-io-google-pubsub</artifactId>
-  <version>3.0.0.3.5</version>
+  <version>3.0.0.3.6-SNAPSHOT</version>
   <name>Pulsar Ecosystem :: IO Connector :: Google Cloud Pub/Sub</name>
   <description>It is an Apache Pulsar io connector for Google Cloud Pub/Sub</description>
   <packaging>nar</packaging>
@@ -59,7 +59,8 @@
     <license.plugin.version>3.0</license.plugin.version>
     <maven-checkstyle-plugin.version>3.0.0</maven-checkstyle-plugin.version>
     <maven-compiler-plugin.version>3.10.1</maven-compiler-plugin.version>
-    <maven-surefire-plugin.version>3.0.0-M3</maven-surefire-plugin.version>
+    <maven-surefire-plugin.version>3.2.5</maven-surefire-plugin.version>
+    <maven-failsafe-plugin.version>3.2.5</maven-failsafe-plugin.version>
     <nifi.nar.plugin.version>1.2.0</nifi.nar.plugin.version>
     <puppycrawl.checkstyle.version>6.19</puppycrawl.checkstyle.version>
     <spotbugs-maven-plugin.version>4.2.2</spotbugs-maven-plugin.version>
@@ -257,6 +258,23 @@
               --add-opens java.base/java.lang=ALL-UNNAMED
               --add-opens=java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED
             </argLine>
+            <excludes>
+              <exclude>**/*Integration*.java</exclude>
+            </excludes>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-failsafe-plugin</artifactId>
+          <version>${maven-failsafe-plugin.version}</version>
+          <configuration>
+            <argLine>
+              --add-opens java.base/java.lang=ALL-UNNAMED
+              --add-opens=java.xml/com.sun.org.apache.xpath.internal=ALL-UNNAMED
+            </argLine>
+            <includes>
+              <include>**/*Integration*.java</include>
+            </includes>
           </configuration>
         </plugin>
         <!-- package -->
